dark mode correction

--- a/src/components/ResetNewPassword/ResetPassword.css
+++ b/src/components/ResetNewPassword/ResetPassword.css
@@ -73,7 +73,6 @@ line-height: 19.2px; /* 96% */
 letter-spacing: -0.3px;
 text-transform: capitalize;
 flex-shrink: 0;
-background: #E0DEDE;
 border-radius: 10px;
 transition: all 350ms;
 border: 1px solid #FF7043;
