--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -122,9 +122,9 @@ button:hover{
     /* background-color: red; */
 
     p{
-        font-size: 22px;
+        font-size: 19px;
         margin: 0;
-        padding: 0;
+        padding: 10px;
     }
 }
 
