--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -41,7 +41,7 @@
     width: 100%;
     font-size: 20px;
     font-weight: 600;
-    padding: 10px;
+    padding: 20px;
     background: #FFFF;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border:none;
